# cution

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tasks.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: claude.yml
crates/arxiv/: Cargo.toml
crates/arxiv/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  crawler.rs  error.rs  lib.rs  supabase_client.rs
crates/custom_site/: Cargo.toml
crates/custom_site/src/: lib.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs  main.rs
crates/hacker_news/: Cargo.toml
crates/hacker_news/src/: api.rs  lib.rs  main.rs  models.rs  storage.rs
crates/hello_world/: Cargo.toml
crates/hello_world/src/: lib.rs  main.rs
crates/mcp_rankings/: Cargo.toml
crates/mcp_rankings/src/: lib.rs  models.rs
crates/openrouter/: Cargo.toml
crates/openrouter/src/: lib.rs  models.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: main.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  main.rs  scheduler.rs
crates/xai_search/: Cargo.toml
crates/xai_search/src/: lib.rs
scripts/: setup_bucket.ts
