[workspace]
members = [
    "crates/common",
    "crates/hacker_news",
    "crates/github",
    "crates/orchestrator",
    "crates/custom_site",
    "crates/arxiv",
    "crates/xai_search",
    "crates/hello_world",
    "crates/openrouter",
    "crates/mcp_rankings",
    "crates/scheduler",
]

resolver = "2"

# [profile.release]
# lto = true
# codegen-units = 1
