[package]
name = "openrouter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
common = { path = "../common" }