[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dotenv = "0.15"

common = { path = "../common" }
github = { path = "../github" }
hacker_news = { path = "../hacker_news" }
custom_site = { path = "../custom_site" }
xai_search = { path = "../xai_search" }
