[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dotenv = "0.15"
time = "0.3"

common = { path = "../common" }
orchestrator = { path = "../orchestrator" }