[package]
name = "xai_search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
common = { path = "../common" }

